# instaseis

./: Readme.md  pyproject.toml  setup.py
.github/workflows/: release.yml
advanced_server_configuration_example/: event_resolver.py  launch_server.py  station_resolver.py
doc/: gui.rst  index.rst
instaseis/: finite_elem_mapping.py  helpers.py  rotations.py  sem_derivatives.py  source.py  spectral_basis.py  version.py
instaseis/database_interfaces/: base_instaseis_db.py  base_netcdf_instaseis_db.py  forward_instaseis_db.py  forward_merged_instaseis_db.py  mesh.py  reciprocal_instaseis_db.py  syngine_instaseis_db.py
instaseis/gui/: instaseis_gui.py  scientific_double_spin_box.py
instaseis/scripts/: repack_db.py
instaseis/server/: __main__.py  app.py  util.py
instaseis/server/routes/: coordinates.py  events.py  finite_source.py  greens.py  seismograms.py  seismograms_raw.py
instaseis/tests/: test_buffer.py  test_instaseis.py  test_receiver.py  test_remote_instaseis_db.py  test_rotations.py  test_server.py  test_server_finite_source.py  test_syngine_instaseis_client.py  test_wrappers.py  testdata.py
src/instaseis/: __init__.py  conftest.py  finite_elem_mapping.py  helpers.py  rotations.py  sem_derivatives.py  source.py  spectral_basis.py  version.py
src/instaseis/benchmark/: __main__.py
src/instaseis/database_interfaces/: __init__.py  base_instaseis_db.py  base_netcdf_instaseis_db.py  forward_instaseis_db.py  mesh.py  (+5 more)
tests/: conftest.py  test_helpers.py  test_server.py  test_server_finite_source.py  test_source.py  tornado_testing_fixtures.py
(+18 files in other folders)
